# ai-tools

./: .gitignore  CLAUDE.md  PROJECT_INVENTORY.md  README.md
.claude-plugin/: marketplace.json
claude-irc/: CLAUDE.md  Makefile  README.md  go.mod  install.sh
grove/: CLAUDE.md  Cargo.toml  README.md  electron-builder.json  eslint.config.js  install-local.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
grove/grove-core/: Cargo.toml
grove/grove-core/src/: buddy.rs  config.rs  git_diff.rs  git_project.rs  ide.rs  lib.rs  logger.rs  mission.rs  note.rs  process_env.rs  pty.rs  terminal_theme.rs  test_support.rs  tool_hooks.rs  url_open.rs  worktree_lifecycle.rs
grove/src-electron/native/: Cargo.toml  package.json
grove/src-electron/native/src/: lib.rs
grove/src-tauri/: Cargo.toml  tauri.conf.json
grove/src-tauri/capabilities/: default.json
grove/src-tauri/icons/: icon.icns
grove/src-tauri/src/: config.rs  eventbus.rs  git_diff.rs  git_project.rs  lib.rs  logger.rs  main.rs  process_env.rs  pty.rs  terminal_theme.rs
memex/: .mcp.json  CLAUDE.md  README.md  package.json  pnpm-lock.yaml
pipemd/: CLAUDE.md  Makefile  README.md  go.mod  go.sum  install.sh
redit/: .mcp.json  CLAUDE.md  Makefile  README.md  go.mod  install.sh
rewind/: CLAUDE.md  Makefile  README.md  go.mod  go.sum  install.sh
scripts/: generate-ensure-binary.sh
vaultkey/: CLAUDE.md  Makefile  README.md  go.mod  go.sum  install.sh
vaultkey-action/: README.md  action.yml
webform/: CLAUDE.md  Makefile  README.md  go.mod  (+1 more)
(+649 files in other folders)
