[package]
name = "grove-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
plist = "1"
dirs = "5"
tokio = { version = "1", features = ["full"] }
git2 = "0.19"
uuid = { version = "1", features = ["v4"] }
portable-pty = "0.8"
base64 = "0.22"
sha2 = "0.10"
