[package]
name = "grove"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
plist = "1"
dirs = "5"
tokio = { version = "1", features = ["full"] }
git2 = "0.19"
uuid = { version = "1", features = ["v4"] }
# W3/W4 will add their own deps
