[package]
name = "grove-electron-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22"
grove-core = { path = "../../grove-core" }
napi = { version = "2", features = ["async", "napi4", "tokio_rt"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
napi-build = "2"
